Bug 301805 - It's not possible to move a window into to top screen of a top-bottom multiscreen environment
Summary: It's not possible to move a window into to top screen of a top-bottom multisc...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: xrandr (other bugs)
Version First Reported In: 4.8.80
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: KWin default assignee
URL: http://people.alvhaus.ch/~ivost/multi...
Keywords:
: 302085 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-06-13 10:52 UTC by Ivo Steinmann
Modified: 2012-06-18 20:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ivo Steinmann 2012-06-13 10:52:11 UTC
I've got a setup with four screens. There are three screens arranged on a bottom line and one centered on top of the middle bottom screen (see image in URL). I can move the mouse to all screens without any problems. It is impossible to move a window from one of the bottom screens to the top screen. When I try to move a window by dragging it from the bottom screen to to top screen, the mouse cursor continues to move over the screen borders, but the window itself somehow hangs at the border.
On the other hand it is possible to start new applications so they appear under the mouse cursor position. When I start an application and quickly move the cursor to the top screen the application starts there and everything works fine. But once the application window is moved from the top screen to the bottom (that works perfect), it's no longer possible to move it back to the top screen.

Reproducible: Always
Comment 1 Ivo Steinmann 2012-06-13 10:55:52 UTC
Just to make things complete:
i'm using xorg-server 1.11.4 and ati drivers 12.6
and it's possible to move windows into the top screen with other window managers (eg.  xfce4 or gnome).
Comment 2 Thomas Lübking 2012-06-13 16:46:58 UTC
came with http://commits.kde.org/kde-workspace/638a839ecd2569bdc2c13d3b2cb2892c87baa72e to fix bug #274466

The fix is to naive / easy, but i more or less have a replacement that covers both cases.
RR later this day ;-)
Comment 3 Thomas Lübking 2012-06-13 17:47:21 UTC
https://git.reviewboard.kde.org/r/105243/
Comment 4 Ivo Steinmann 2012-06-14 10:19:30 UTC
fine :) will that appear in 4.8.95? then I can test it
Comment 5 Thomas Lübking 2012-06-14 17:14:38 UTC
I assume so, but it's quite a while until RC1 gets released, therefore notice that as workaround unrestricted moving (alt+left mouse button) will work under all circumstances.
Comment 6 Thomas Lübking 2012-06-17 19:23:14 UTC
*** Bug 302085 has been marked as a duplicate of this bug. ***
Comment 7 Thomas Lübking 2012-06-18 20:25:26 UTC
Git commit 33ffe90128df6ae038b27bd9c9371acacaeee098 by Thomas Lübking.
Committed on 13/06/2012 at 19:38.
Pushed by luebking into branch 'master'.

fix window postition on varying screen struts better
Related: bug 274466
FIXED-IN: 4.9

M  +31   -20   kwin/geometry.cpp

http://commits.kde.org/kde-workspace/33ffe90128df6ae038b27bd9c9371acacaeee098