fix window postition on varying screen struts better

BUG: 301805
CCBUG: 274466
FIXED-IN: 4.9